# xcmake

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  VendorConfig.cmake  cppreference-doxygen-web.tag.xml.sha512  xcmake-config.cmake
ci/: lint.sh
dependencies/: Ext_GoogleTest.cmake  FindCUDA.cmake  FindFFTW.cmake  FindHyperscan.cmake  FindIPP.cmake  FindPCRE.cmake  FindPCRE2.cmake  FindRE2.cmake  FindTESTU01.cmake  FindTestU01.cmake  Findfftw.cmake  docopt-cpp.cmake
scripts/: ArgHandle.cmake  CPackStuff.cmake  CUDA.cmake  CompilationDB.cmake  CompilerSubcommands.cmake  CustomCommands.cmake  Dependencies.cmake  Documentation.cmake  Doxygen.cmake  Export.cmake  ExternalProj.cmake  Filesystem.cmake  Find.cmake  Flags.cmake  GBench.cmake  GTest.cmake  Git.cmake  Headers.cmake  IncludeGuard.cmake  Init.cmake  Install.cmake  InstallExternal.cmake  Log.cmake  OnExit.cmake  Option.cmake  Packaging.cmake  Pandoc.cmake  Properties.cmake  SWIG.cmake  ScopedSubdirs.cmake  SearchFunctions.cmake  Summary.cmake  Targets.cmake  Test.cmake  Utils.cmake  XCMake.cmake  XCMakeCheckLanguage.cmake
scripts/properties/: ASSERTIONS.cmake  BUILD_TYPE_AS_MACRO.cmake  CLANG_TIDY.cmake  CUDA.cmake  CUDA_REMARKS.cmake  CUDA_TOOL_EXT.cmake  DEBUG_INFO.cmake  DEBUG_MODE.cmake  FPIC.cmake  INCLUDE_WHAT_YOU_USE.cmake  IS_TEST.cmake  LIBCXX.cmake  LLVM_MODULES.cmake  OPT_LEVEL.cmake  RELEASE_MODE.cmake  RELWITHDEBINFO_MODE.cmake  SAFE_STACK.cmake  SANITISER.cmake  SCALE.cmake  SOURCE_COVERAGE.cmake  STATIC_STDCXXLIB.cmake  STD_FILESYSTEM.cmake  STRIP.cmake  VECTORISER_REMARKS.cmake  WERROR.cmake
test/: test.sh
test/add_headers/: test.sh
test/add_headers/common/: a.h
test/add_headers/pcpp/: CMakeLists.txt
test/add_headers/pcpp/ref/: a.h  b.h
test/add_headers/pcpp_compressed/: CMakeLists.txt
test/add_headers/pcpp_compressed/ref/: a.h  b.h
test/add_headers/simple/: CMakeLists.txt
test/common/simple/: CMakeLists.txt  main.cpp
test/cross/: test.sh
toolchain/: README.md  toolchain.cmake  util.cmake
toolchain/fragments/: common.cmake  cross.cmake  microarch.cmake  native.cmake
toolchain/fragments/arch/aarch64/: common.cmake  cortexa53.cmake  cortexa72.cmake  generic.cmake
toolchain/fragments/arch/x86_64/: avx.cmake  avx2.cmake  common.cmake  generic.cmake  sse4.cmake  v3.cmake
toolchain/fragments/os/: ubuntu16.04.cmake  win64.cmake
toolchain/fragments/os/common/: linux.cmake
tools/: SymLink.cmake  clang-tidy.sh  deduplicate_newlines.sh  tm-sanitiser.sh
tools/clang-tidy/: clang-tidy.sh  defaults.yaml  vfs.yaml
tools/doxygen/: Doxyfile.in  DoxygenLayout.xml  input_filter.py  spectral_doc_footer.html  spectral_doc_header.html  spectral_doc_style.css
tools/doxygen/externaltags/cppreference/: CMakeLists.txt  extract.sh  html_book_20190607.tar.xz.sha512
tools/doxygen/externaltags/nvcuda/: CMakeLists.txt  Doxyfile.suffix  deobfuscate.sh  preprocess.sh
tools/doxygen/include/: namedreq.dox
tools/gpu_autodetect/: CMakeLists.txt  README.md  main.cpp
tools/iwyu/: all.imp  cuda.imp  gtest.imp  iwyu.sh  stl.imp
tools/pandoc/: dependencies.py  pandoc.sh  preprocessor.py  standalone.sh  style.css  url-rewriter.sh
